# full-stack-industrial-ai

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: ci-cd.yml
benchmark/: simple-query.json
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  FAQ.md  ROADMAP.md
grafana/: safety_dashboard.py
grafana/dashboards/: ai-ethics.json  ultra_intelligent_routing.py
k8s/: deployment.yaml  rbac.yaml
k8s/charts/fullstack-ai-chart/: README.md
k8s/charts/fullstack-ai-chart/templates/: hpa.yaml  network-policies.yaml  rbac.yaml
k8s/trae-agent-chart/: Chart.yaml  values.yaml
k8s/trae-agent-chart/templates/: _helpers.tpl  deployment.yaml
monitoring/: safety_alerts.yml
scripts/: benchmark.sh  configure-keycloak.sh  deploy-keycloak-helm.sh  deploy-production.sh  deploy-vault.sh  health-check.sh  monitor-usage.sh  setup-keycloak-docker.sh  setup-keycloak-k8s.sh  setup.sh  test-all.sh  test-apis.sh
src/agents/: agents_config.yaml
src/context/: smart_context_manager.py
src/frontend/: README.md
src/prompts/: safety_prompts.py
src/proxy/: lite-llm-proxy-config.yaml
src/router/: ultra_intelligent_router.py
src/safety/: circuit_breakers.py
tests/: safety_tests.py  test_basic.py
tests/integration/: test_routing_intelligence.py
