[tool.poetry]
name = "full-stack-industrial-ai"
version = "1.0.0"
description = "Full-Stack Industrial AI with intelligent routing"
authors = ["arturdrr <arturdr@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.0"
httpx = "^0.25.0"
redis = "^5.0.0"
psycopg2-binary = "^2.9.0"
salalchemy = "^2.0.0"
prometheus-client = "^0.18.0"
openai = "^1.0.0"
anthropic = "^0.7.0"
google-generativeai = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.0"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.11.0"
httpx = "^0.25.0"
faker = "^19.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
